package Paquete;

/**
 * Enumeración que representa el estado de asistencia de un empleado a una reunión.
 */
public enum EstadoAsistencia {

    /** El empleado está presente en la reunión. */
    Presente,

    /** El empleado está ausente en la reunión. */
    Ausente,

    /** El empleado llega tarde a la reunión. */
    Tarde
}
