package Paquete;

import java.time.Instant;
import java.util.List;

public interface Invitable{
    public void invitar(Reunion reunion);
}
